--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -30,6 +31,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13"
+    "@types/jest": "^24.0.13",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
